@@ -19,6 +19,7 @@
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/Tree.html">tree</a>: Allows you to treat model objects as being part of a tree, finding ancestors, descendants, siblings, and tree roots.</li>
 </ul></li>
 <li>Attributes:<ul>
+<li><a href="rdoc-plugins/classes/Sequel/Plugins/AccessedColumns.html">accessed_columns</a>: Records which columns have been accessed for a given model instance.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/BlacklistSecurity.html">blacklist_security</a>: Adds blacklist-based model mass-assignment protection.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/BooleanReaders.html">boolean_readers</a>: Adds attribute? methods for all boolean columns.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/ColumnConflicts.html">column_conflicts</a>: Automatically handles column names that conflict with Ruby/Sequel method names.</li>
